Bug 236432 - Difficulties when trying to reconcile
Summary: Difficulties when trying to reconcile
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Unspecified
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-05-05 13:49 UTC by allan
Modified: 2010-05-07 03:43 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description allan 2010-05-05 13:49:52 UTC
Version:           3.97.2 svn 1121075 (using KDE 4.3.5)
Installed from:    openSUSE RPMs

I think there may be two or three separate issues here.
I wanted to reconcile a banking account, which previously had been reconciled a month ago.  Only three items had been added in the meantime.

However, both the starting and finishing balances were £32000 too high.  Looking back, I found that a number of items that must have been reconciled correctly last month, no longer were marked reconciled.  As the account had previously been reconciled correctly, and as the now unreconciled items were spread out, I decided to do a 'block' reconcile of the whole account apart from the three new entries, which are marked clear.  When I then went to reconcile again, nothing had changed, and I realised that the block reconcile had done nothing.  This is because of the previously reported problem of context menu selection clearing selected status.

I found the keyboard shortcut to mark as reconciled - ctrl+shift+space - but that also did nothing, and I realised that that shortcut, which is available in v1.03, is not in 3.97.

So, I have to revert to v1.03 to reconcile.

Now, I look to see why the entries had become unreconciled.  They now appear to have a monetary value as their payee,which is obviously wrong, but on opening them this turns out to be from a memo, and the payee is blank.

What else they have in common, is that the payee they should have had is the one I was attempting to change when KMM crashed last night.
Comment 1 allan 2010-05-05 13:56:02 UTC
Oh, and finally, having opened one of those items to investigate, on closing it again, unaltered, a blank entry has been inserted just below it.  In fact it is not a blank entry, as clicking on it does not open a new transaction, but right clicking it reopens the line above.  I have seen this before but haven't  bothered reporting. It is reproduceable.
Comment 2 Alvaro Soliverez 2010-05-07 03:43:00 UTC
SVN commit 1123818 by asoliverez:

Restored shortcut to mark a transaction as reconciled.
This might help clarify the remaining issues

BUG:236432

 M  +1 -0      kmymoney.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1123818