Restored shortcut to mark a transaction as reconciled. This might help clarify the remaining issues

BUG:236432

svn path=/trunk/playground/office/kmymoney/; revision=1123818